--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -305,7 +305,7 @@ span.post-read-more a:hover {
 }
 
 .mainheading h1.sitetitle {
-    font-family: Righteous;
+    font-family: Lato;
 }
 
 .mainheading h1.posttitle {
